[metadata]
name = block
version = 1.0.0
author = Giulio Procopio
author_email = giulioprocopioo@gmail.com
description = Python block package
license = MIT
license_file = LICENSE
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = python, block, machine-learning
url = https://github.com/giuppox/block
project_urls =
    Bug Tracker = https://github.com/Giuppox/block/issues
    Source Code = https://github.com/Giuppox/block
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: C/C++
    Typing :: Typed
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
packages = block
python_requires = >=3.6
install_requires =
    setuptools>=42
zip_safe = False
include_package_data = True
