[metadata]
name = block
version = 1.0.0
author = Giulio Procopio
author_email = giulioprocopioo@gmail.com
description = A fast and intuitive python machine learning package
license = MIT
license_file = LICENSE
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = python, block, machine-learning
url = https://github.com/giuppox/block
project_urls =
    Bug Tracker = https://github.com/Giuppox/block/issues
    Source Code = https://github.com/Giuppox/block
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Typing :: Typed

[options]
packages = block
python_requires = >=3.7
install_requires =
    setuptools>=42
zip_safe = False
include_package_data = True
